update tugas css

--- a/04. HTML/praktikum/LandingPage.html
+++ b/04. HTML/praktikum/LandingPage.html
@@ -20,7 +20,7 @@
     </div>
     <div>
         <td>
-            <img src="hero-img.png" alt="Illustration of business solutions">
+            <img src="hero-img.png" alt="gambar">
         </td>
         <td>
             <h2>Join Our Newsletter</h2>
