update tugas praktikum

--- a/06. BOOTSTRAMP/praktikum/createProduct.html
+++ b/06. BOOTSTRAMP/praktikum/createProduct.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Create Product</title>
 
-    <script src="https://cdn.tailwindcss.com"></script> <!-- Perbaikan dilakukan di sini -->
+    <script src="https://cdn.tailwindcss.com"></script>
 
     <script>
         function validateForm() {
